--- a/app/views/documents/show.html.haml
+++ b/app/views/documents/show.html.haml
@@ -2,7 +2,7 @@
   %ul.nav.nav-tabs
     %li.tabtext.active
       = link_to 'main'
-    - @parent_tabs.each do |tab|
+    - @tabs.each do |tab|
       %li.tabtext
         =link_to tab, load_tab_document_path(id: @id, parent: @type, type:  tab),  remote: true
 .row
