--- a/app/views/documents/_child_tab.haml
+++ b/app/views/documents/_child_tab.haml
@@ -4,7 +4,8 @@
       - @headers.each do |header|
         %th=header 
   %tbody
-    - @response.hits.hits.each  do |hit|
+    - @response.each  do |hit|
       %tr
         - @headers.each do |key|
           %td=hit._source[key]
+= paginate @response, remote: true
