--- a/app/views/documents/_main_tab.haml
+++ b/app/views/documents/_main_tab.haml
@@ -1,6 +1,6 @@
 %table.table.table-bordered.table-striped
   %tbody
-    - @source.keys.each do |key|
+    - @doc.source.keys.each do |key|
       %tr          
         %th=key
-        %td=@source[key]
+        %td=@doc.source[key]
