--- a/app/views/reports/show.json.erb
+++ b/app/views/reports/show.json.erb
@@ -2,5 +2,5 @@
   "sEcho": <%= @secho %>,
   "iTotalRecords": <%= @report_builder.total_records %>,
   "iTotalDisplayRecords": <%= @report_builder.total_display_records %>,
-  "aaData": <%= raw @report_builder.table_data %>
+  "aaData": <%= raw @report_builder.data %>
 }
