--- a/app/views/searchs/index.html.haml
+++ b/app/views/searchs/index.html.haml
@@ -20,7 +20,7 @@
             field
             %b=doc.highlight.first[0]
             match: 
-            %b=doc.highlight.first[1]
+            %b=doc.highlight.first[1].first
         .description
           %b category :
           = doc['_index']
