--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -1,2 +1,17 @@
-%h1 Reports#index
-%p Find me in app/views/reports/index.html.haml
+.row
+  .col-md-12
+    %h1 reports
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th report
+          - if can? :manage, Report
+            %th actions
+      %tbody
+        - @reports.each do |report|
+          %tr
+            %td= link_to report.name, report
+            - if can? :manage, Report
+              %td
+                = link_to t('.edit', :default => t("helpers.links.edit")), edit_report_path(report), :class => 'btn btn-mini'
+                = link_to t('.destroy', :default => t("helpers.links.destroy")), report_path(report), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
