--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -15,3 +15,4 @@
               %td
                 = link_to t('.edit', :default => t("helpers.links.edit")), edit_report_path(report), :class => 'btn btn-mini'
                 = link_to t('.destroy', :default => t("helpers.links.destroy")), report_path(report), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
+  = link_to 'New Report', new_report_path
