--- a/app/views/searchs/index.html.haml
+++ b/app/views/searchs/index.html.haml
@@ -5,7 +5,7 @@
       .col-md-6.col-md-offset-4
         = text_field_tag :query, params[:query], class: "form-control input-lg"
         = button_tag class: "btn btn-default btn-lg", type: 'submit', name: nil do
-          %span.glyphicon.glyphicon-search
+          = fa_icon 'search'
 %br
 - unless @search.blank?
   .row
@@ -16,17 +16,35 @@
   - @search.results.each do |doc|
     .row
       .col-md-8.col-md-offset-1
-        = link_to document_path( get_doc_id(doc) ) do
+        - if doc['fields'].present? and @parents[ doc['fields']['_parent'] ].present?
+          = link_to document_path( get_doc_id(doc) ) do
+            %h2
+              - @parents[ doc['fields']['_parent'] ].each do |key, value|
+                = key
+                %b= value.first
+          .description
+            %b category :
+            = doc['_index']
+            %b type :
+            = doc['_type']
           %h3
             field
             %b=doc.highlight.first[0]
             match:
             %b=doc.highlight.first[1].first
-        .description
-          %b category :
-          = doc['_index']
-          %b type :
-          = doc['_type']
+
+        - else
+          = link_to document_path( get_doc_id(doc) ) do
+            %h3
+              field
+              %b=doc.highlight.first[0]
+              match:
+              %b=doc.highlight.first[1].first
+          .description
+            %b category :
+            = doc['_index']
+            %b type :
+            = doc['_type']
   .row
     .col-md-8.col-md-offset-1
       = paginate @search.results
